--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       ctx.fillStyle = 'white';
       ctx.textAlign = 'center';
 
-      ctx.font = '16px "Courier New", Courier, monospac';
+      ctx.font = '16px "Lucida Console", "Courier New", monospace';
       ctx.fillText(label, x + halfWidth / 2, 60);
 
-      ctx.font = '28px "Courier New", Courier, monospac';
+      ctx.font = '28px "Lucida Console", "Courier New", monospace';
       ctx.fillText(`$${price}`, x + halfWidth / 2, 120);
 
-      ctx.font = '20px "Courier New", Courier, monospac';
+      ctx.font = '20px "Lucida Console", "Courier New", monospace';
       ctx.fillText(change, x + halfWidth / 2, 180);
     }
 
