--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     async function render() {
-      const font = new FontFace('DOSVGA', 'url("LessPerfectDOSVGA.ttf")');
+      const font = new FontFace('DOSVGA', 'url("lyon-regular.ttf")');
       await font.load();
       document.fonts.add(font);
 
