--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       ctx.fillStyle = 'white';
       ctx.textAlign = 'center';
 
-      const font = "DOSVGA";
+      const font = "Helvetica";
       ctx.font = `18px ${font}`;
       ctx.fillText(label, x + halfWidth / 2, 60);
 
