--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     async function render() {
-      const font = new FontFace('DOSVGA', 'url("Avenir LT Std 85 Heavy.otf")');
+      const font = new FontFace('DOSVGA', 'url("MorePerfectDOSVGA.ttf")');
       await font.load();
       document.fonts.add(font);
 
