--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     async function render() {
-      const font = new FontFace('DOSVGA', 'url("MorePerfectDOSVGA.ttf")');
+      const font = new FontFace('DOSVGA', 'url("Comic Sans MS 400.ttf")');
       await font.load();
       document.fonts.add(font);
 
