--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>SPX vs SPX6900</title>
-  <style>
-    body {
-      background: black;
-      color: white;
-      font-family: monospace;
-      display: flex;
-      justify-content: center;
-      padding: 2rem;
-    }
-  </style>
 </head>
 
 <body>
   <canvas id="priceCanvas" width="512" height="256"></canvas>
 
+  <div>
+    <button id="copyBtn">Copy Image</button>
+  </div>
+  
   <script>
     const canvas = document.getElementById('priceCanvas');
     const ctx = canvas.getContext('2d');
@@ -95,7 +89,6 @@
     });
   </script>
 
-  <button id="copyBtn" title="Copy to clipboard" style="margin-left: 1rem; background: none; border: none; cursor: pointer; font-size: 24px;">📋</button>
 
 </body>
 
