--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <div>
     <button id="copyButton">Copy to Clipboard</button>
+    <p id="errorMessage" class="error"></p>
   </div>
 
   <script>
@@ -23,15 +24,17 @@
 
     async function getPriceData(symbol) {
       if (symbol === 'spx') {
-        const response = await fetch('https://corsproxy.io/?https://query1.finance.yahoo.com/v8/finance/chart/%5EGSPC?range=1d&interval=1d');
-        const json = await response.json();
+        //const response = await fetch('https://corsproxy.io/?https://query1.finance.yahoo.com/v8/finance/chart/%5EGSPC?range=1d&interval=1d');
+        //const json = await response.json();
+        const json = { "chart": { "result": [{ "meta": { "currency": "USD", "symbol": "^GSPC", "exchangeName": "SNP", "fullExchangeName": "SNP", "instrumentType": "INDEX", "firstTradeDate": -1325583000, "regularMarketTime": 1752180748, "hasPrePostMarketData": false, "gmtoffset": -14400, "timezone": "EDT", "exchangeTimezoneName": "America/New_York", "regularMarketPrice": 6280.46, "fiftyTwoWeekHigh": 6290.22, "fiftyTwoWeekLow": 4835.04, "regularMarketDayHigh": 6290.22, "regularMarketDayLow": 6251.44, "regularMarketVolume": 2828822000, "longName": "S&P 500", "shortName": "S&P 500", "chartPreviousClose": 6263.26, "priceHint": 2, "currentTradingPeriod": { "pre": { "timezone": "EDT", "start": 1752134400, "end": 1752154200, "gmtoffset": -14400 }, "regular": { "timezone": "EDT", "start": 1752154200, "end": 1752177600, "gmtoffset": -14400 }, "post": { "timezone": "EDT", "start": 1752177600, "end": 1752192000, "gmtoffset": -14400 } }, "dataGranularity": "1d", "range": "1d", "validRanges": ["1d", "5d", "1mo", "3mo", "6mo", "1y", "2y", "5y", "10y", "ytd", "max"] }, "timestamp": [1752180748], "indicators": { "quote": [{ "open": [6266.7998046875], "volume": [2828822000], "low": [6251.43994140625], "close": [6280.4599609375], "high": [6290.22021484375] }], "adjclose": [{ "adjclose": [6280.4599609375] }] } }], "error": null } };
         const last = json.chart.result[0].meta.regularMarketPrice;
         const prev = json.chart.result[0].meta.chartPreviousClose;
         const change = ((last - prev) / prev) * 100;
         return { name: 'S&P 500', price: last.toFixed(2), change: (change >= 0 ? '+' : '') + change.toFixed(2) + '%' };
       } else {
-        const response = await fetch('https://corsproxy.io/?https://api.coingecko.com/api/v3/simple/price?ids=spx6900&vs_currencies=usd&include_24hr_change=true');
-        const json = await response.json();
+        //const response = await fetch('https://corsproxy.io/?https://api.coingecko.com/api/v3/simple/price?ids=spx6900&vs_currencies=usd&include_24hr_change=true');
+        //const json = await response.json();
+        const json = { "spx6900": { "usd": 1.57, "usd_24h_change": 6.207273452132412 } };
         const price = json.spx6900.usd;
         const change = json.spx6900.usd_24h_change;
         return { name: 'S&P 6900', price: price.toFixed(5), change: (change >= 0 ? '+' : '') + change.toFixed(2) + '%' };
@@ -91,13 +94,27 @@
     }
 
     async function copyCanvasContentsToClipboard() {
+      const errorMessage = document.getElementById('errorMessage');
+      errorMessage.style.display = 'none';
+
+      // Check Clipboard API support
+      if (!navigator.clipboard || !window.ClipboardItem) {
+        errorMessage.textContent = 'Clipboard copying is not supported in this browser.';
+        errorMessage.style.display = 'block';
+        return;
+      }
+
       try {
         const blob = await getBlobFromCanvas(canvas);
-        const clipboardItem = new ClipboardItem({ [blob.type]: blob });
+        const clipboardItem = new ClipboardItem({ 'image/png': blob });
         await navigator.clipboard.write([clipboardItem]);
-        console.log('Canvas copied to clipboard');
+        errorMessage.textContent = 'Canvas copied to clipboard!';
+        errorMessage.style.display = 'block';
+        errorMessage.style.color = 'green';
       } catch (err) {
         console.error('Failed to copy canvas:', err);
+        errorMessage.textContent = 'Failed to copy to clipboard. Please try again.';
+        errorMessage.style.display = 'block';
       }
     }
 
