--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=969, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SPX vs SPX6900</title>
   <style>
     body {
@@ -22,7 +22,8 @@
       border: 1px solid white;
     }
 
-    button, a {
+    button,
+    a {
       margin-top: 10px;
       padding: 8px 16px;
       font-family: sans-serif;
