--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       border: 1px solid white;
     }
 
-    button,
     a {
       margin-top: 10px;
       padding: 8px 16px;
@@ -33,9 +32,6 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
-    }
-
-    a {
       display: none;
     }
 
@@ -50,9 +46,6 @@
 
 <body>
   <img id="resultImage" alt="SPX chart" />
-  <button id="copyButton">Copy to Clipboard</button>
-  <a id="downloadLink" download="spx_vs_spx6900.png">Download Image</a>
-  <p id="errorMessage" class="error"></p>
 
   <script>
     const width = 969;
@@ -68,16 +61,8 @@
 
     async function getPriceData(symbol) {
       if (symbol === 'spx') {
-        const json = {
-          chart: {
-            result: [{
-              meta: {
-                regularMarketPrice: 6251.25,
-                chartPreviousClose: 6225.85
-              }
-            }]
-          }
-        };
+        const response = await fetch('https://corsproxy.io/?https://query1.finance.yahoo.com/v8/finance/chart/%5EGSPC?range=1d&interval=1d');
+        const json = await response.json();
         const last = json.chart.result[0].meta.regularMarketPrice;
         const prev = json.chart.result[0].meta.chartPreviousClose;
         const change = ((last - prev) / prev) * 100;
@@ -87,12 +72,8 @@
           change: (change >= 0 ? '+' : '') + change.toFixed(2) + '%'
         };
       } else {
-        const json = {
-          "spx6900": {
-            "usd": 1.42,
-            "usd_24h_change": 6.65
-          }
-        };
+        const response = await fetch('https://corsproxy.io/?https://api.coingecko.com/api/v3/simple/price?ids=spx6900&vs_currencies=usd&include_24hr_change=true');
+        const json = await response.json();
         const price = json.spx6900.usd;
         const change = json.spx6900.usd_24h_change;
         return {
@@ -103,33 +84,34 @@
       }
     }
 
-    function drawChart(ctx, spx, spx6900) {
-      // SPX Box
+    function drawChart(ctx, spx, spx6900, fontName) {
       ctx.fillStyle = 'green';
       ctx.fillRect(0, 0, halfWidth, height);
       ctx.fillStyle = 'white';
       ctx.textAlign = 'center';
 
-      ctx.font = "20px 'Courier New', monospace";
-      ctx.fillText(spx.name, halfWidth / 2, 120);
-      ctx.font = "48px 'Courier New', monospace";
-      ctx.fillText(`$${spx.price}`, halfWidth / 2, 190);
-      ctx.font = "30px 'Courier New', monospace";
-      ctx.fillText(spx.change, halfWidth / 2, 250);
+      const nameFontSize = 34;
+      const priceFontSize = 48;
+      const changeFontSize = 30;
 
-      // SPX6900 Box
+      ctx.font = `${nameFontSize}px "${fontName}"`;
+      ctx.fillText(spx.name, halfWidth / 2, 120);
+      ctx.font = `${priceFontSize}px "${fontName}"`;
+      ctx.fillText(`$${spx.price}`, halfWidth / 2, 190);
+      ctx.font = `${changeFontSize}px "${fontName}"`;
+      ctx.fillText(spx.change, halfWidth / 2, 260);
+
       ctx.fillStyle = 'green';
       ctx.fillRect(halfWidth, 0, halfWidth, height);
       ctx.fillStyle = 'white';
 
-      ctx.font = "20px 'Courier New', monospace";
+      ctx.font = `${nameFontSize}px "${fontName}"`;
       ctx.fillText(spx6900.name, halfWidth + halfWidth / 2, 120);
-      ctx.font = "48px 'Courier New', monospace";
+      ctx.font = `${priceFontSize}px "${fontName}"`;
       ctx.fillText(`$${spx6900.price}`, halfWidth + halfWidth / 2, 190);
-      ctx.font = "30px 'Courier New', monospace";
-      ctx.fillText(spx6900.change, halfWidth + halfWidth / 2, 250);
+      ctx.font = `${changeFontSize}px "${fontName}"`;
+      ctx.fillText(spx6900.change, halfWidth + halfWidth / 2, 260);
 
-      // Divider line
       ctx.beginPath();
       ctx.moveTo(halfWidth, 0);
       ctx.lineTo(halfWidth, height);
@@ -138,26 +120,30 @@
       ctx.stroke();
     }
 
-    function isClipboardImageCopySupported() {
-      return navigator.clipboard &&
-        window.ClipboardItem &&
-        !/iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    }
-
     async function getBlobFromCanvas(canvas) {
       return new Promise((resolve, reject) => {
         canvas.toBlob(blob => blob ? resolve(blob) : reject(new Error("toBlob failed")), 'image/png');
       });
     }
 
+    async function loadFont(fontName, fontUrl) {
+      const font = new FontFace(fontName, `url(${fontUrl})`);
+      await font.load();
+      document.fonts.add(font);
+      await document.fonts.ready;
+    }
+
     async function renderChartImage() {
+      const fontName = 'Alvi_Nastaleeq_Regular';
+      await loadFont(fontName, './Alvi_Nastaleeq_Regular.ttf');
+
       const canvas = createCanvas();
       const ctx = canvas.getContext('2d');
 
       const spx = await getPriceData('spx');
       const spx6900 = await getPriceData('spx6900');
 
-      drawChart(ctx, spx, spx6900);
+      drawChart(ctx, spx, spx6900, fontName);
 
       const img = document.getElementById('resultImage');
       img.src = canvas.toDataURL('image/png');
@@ -165,44 +151,15 @@
       const blob = await getBlobFromCanvas(canvas);
       const url = URL.createObjectURL(blob);
 
-      const downloadLink = document.getElementById('downloadLink');
-      downloadLink.href = url;
-      downloadLink.style.display = 'inline-block';
-
       return blob;
     }
 
-    async function copyImageToClipboard(blob) {
-      const errorMessage = document.getElementById('errorMessage');
-      errorMessage.style.display = 'none';
-
+    (async function init() {
       try {
-        const item = new ClipboardItem({ 'image/png': blob });
-        await navigator.clipboard.write([item]);
-        errorMessage.textContent = 'Image copied to clipboard!';
-        errorMessage.style.color = 'green';
-        errorMessage.style.display = 'block';
+        await renderChartImage();
       } catch (err) {
         console.error(err);
-        errorMessage.textContent = 'Failed to copy to clipboard.';
-        errorMessage.style.color = 'red';
-        errorMessage.style.display = 'block';
-      }
-    }
-
-    document.getElementById('copyButton').addEventListener('click', async () => {
-      const blob = await renderChartImage();
-      await copyImageToClipboard(blob);
-    });
-
-    (async function init() {
-      const blob = await renderChartImage();
-
-      if (!isClipboardImageCopySupported()) {
-        document.getElementById('copyButton').style.display = 'none';
-        document.getElementById('errorMessage').textContent = 'Long-press image on mobile to save or share.';
-        document.getElementById('errorMessage').style.color = 'orange';
-        document.getElementById('errorMessage').style.display = 'block';
+        document.body.insertAdjacentHTML('beforeend', `<p class="error">Failed to load chart: ${err.message}</p>`);
       }
     })();
   </script>
