--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
     async function getBlobFromCanvas(canvas) {
       return new Promise((resolve, reject) => {
-        // Using PNG format to avoid resampling on clipboard
-        canvas.toBlob(blob => blob ? resolve(blob) : reject(new Error("toBlob failed")), 'image/png');
+        // Generate the image as JPEG with 100% quality
+        canvas.toBlob(blob => blob ? resolve(blob) : reject(new Error("toBlob failed")), 'image/jpeg', 1.0); // 100% quality
       });
     }
 
@@ -159,7 +159,7 @@
       drawChart(ctx, spx, spx6900, fontName);
 
       const img = document.getElementById('resultImage');
-      img.src = canvas.toDataURL('image/png');
+      img.src = canvas.toDataURL('image/jpeg', 1.0);  // Display as JPEG with 100% quality
 
       const blob = await getBlobFromCanvas(canvas);
       const url = URL.createObjectURL(blob);
